--- a/webappfiles/templates/index.html
+++ b/webappfiles/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Landing_Page</title>
+    <title>_Landing_Page_</title>
   </head>
   <body>
     {% extends "basecust.html" %} {% block content %}
